refactor(suburb-service): normalise data model, rewrite transport client, expand region coverage
Entities & schema
- Introduce Region entity (replaces string region column on Suburb); seed from SydneyRegion enum on startup
- Rename column: name → suburb_name / city_name, suburb_id FK columns → fk_suburb_id / fk_city_id / fk_region_id
- Rename avg_icsea_score → best_icsea_score (store best, not average)
- Add has_ferry_access column to transport_data
- Add regions lookup table to schema.sql

suburb-service: new services
- TransportDataLoaderService: dedicated async loader with correctionService hook
- TransportCorrectionService: applies YAML-configured manual overrides post-load
- SuburbPersistenceService: extracted suburb persist logic from DataInitializerService
- TransportCorrectionsProperties: @ConfigurationProperties binding for transport.corrections[]

suburb-service: TransportNSWApiClient rewrite
- Switch from stop_finder to coord + departure_mon + trip endpoints
- Detect train/metro/light-rail/TrainLink legs; count distinct bus routes; detect ferry wharfs
- Add CBD commute by bus; cap regional train commutes > 300 min
- Add 20+ manually-verified corrections in application.yml for API inaccuracies

suburb-service: RegionClassifier rewrite
- TreeMap-based range lookup replaces if-chain; overlap detection at static-init time
- Expand SydneyRegion enum to cover all NSW (Hunter, New England, Illawarra, Riverina, etc.)
- Add name-based overrides for border suburbs sharing an ACT/QLD postcode
- Add cross-border exceptions (VIC 3644/3691/3707, QLD 4375-4385)

suburb-service: school data improvements
- Tiered school radius matching: 5 km / 15 km / 30 km per suburb density
- Track best ICSEA score instead of average across nearby schools
- Fix @Async self-invocation issue in SchoolDataLoaderService.reloadAllAsync

user-service fixes
- Rename DB to suburbscore_users in application.yml (local + docker profiles)
- Fix security filter chain order: JWT filter before RateLim